- Bugfixing and Tests